syntax = "proto3";

package item;

service ItemsController {
    rpc FindOne (ItemById) returns (ResponseDataItem);
    rpc FindMany (ItemsPerPage) returns (ResponseItemRepeated);
    rpc PostOne (CreateItemDto) returns (ResponseDataUpsertedItem);
    rpc DeleteOne (ItemById) returns (ResponseDataDeleted);
    rpc UpdateOne (UpdateItemDto) returns (ResponseDataUpsertedItem);
    rpc UpdateMetal(MetalDto) returns (ResponseDataMetal);
    rpc DeleteMetal(MetalById) returns (ResponseDataDeleted);
    rpc AddMetal(CreateMetalDto) returns (ResponseDataMetal);
    rpc FindMetals(EmptyMessage) returns (ResponseMetalRepeated);
}

message ItemById {
    string id = 1;
}

message Item {
    string id = 1;
    string jewelleryId = 2;
    string name = 3;
    string descriptionJewellery = 4;
    string collectionId = 5;
    string metalName = 6;
    string metalImage = 7;
    string care = 8;
    double price = 9;
    string descriptionItem = 10;
    string delivery = 11;
    repeated string images = 12;
    repeated string availableMetals = 13;
    repeated string availableMetalsImages = 14;
}

message ItemsPerPage {
    int32 page = 1;
    int32 itemsPerPage = 2;
    string collectionId = 3;
}

message ItemOnPage {
    string id = 1;
    string name = 2;
    string image = 3;
    int32 price = 4;
}

message CreateItemDto {
    string name = 1;
    string descriptionJewellery = 2;
    string collectionId = 3;
    string metalName = 4;
    string metalImage = 5;
    string care = 6; 
    int32 price = 7;
    string descriptionItem = 8;
    string delivery = 9;
    repeated string images = 10;
}

message UpsertItemDto {
    string id = 1;
    string jewelleryId = 2;
    string name = 3;
    string descriptionJewellery = 4;
    string collectionId = 5;
    string metalName = 6;
    string metalImage = 7;
    string care = 8;
    double price = 9;
    string descriptionItem = 10;
    string delivery = 11;
    repeated string images = 12;
}

message UpdateItemDto {
    string name = 1;        
    string descriptionJewellery = 2;
    string collectionId = 3; 
    int32 price = 4;
    string descriptionItem = 5;
    string delivery = 6; 
    repeated string images = 7;
    string id = 8;
}

message DeleteResponse {
    string message = 1;
}

message MetalDto {
    string id = 1;
    string name = 2;
    string image = 3;
    string care = 4;
}

message CreateMetalDto {
    string name = 1;
    string image = 2;
    string care = 3;
}

message MetalById {
    string id = 1;
}
message EmptyMessage {
    
}

message ResponseDataItem {
    string status = 1;
    string message = 2;
    oneof response {
        Item data = 3;
        string error = 4;
    }
}

message ResponseItemRepeated {
    string status = 1;
    string message = 2;
    repeated ItemOnPage data = 3;
    string error = 4;
}

message ResponseDataUpsertedItem {
    string status = 1;
    string message = 2;
    oneof response {
        UpsertItemDto data = 3;
        string error = 4;
    }
}

message ResponseDataUpdatedItem {
    string status = 1;
    string message = 2;
    oneof response {
        UpdateItemDto data = 3;
        string error = 4;
    }
}

message ResponseDataDeleted {
    string status = 1;
    string message = 2;
    oneof response {
        DeleteResponse data = 3;
        string error = 4;
    }
}


message ResponseDataMetal {
    string status = 1;
    string message = 2;
    oneof response {
        MetalDto data = 3;
        string error = 4;
    }
}


message ResponseMetalRepeated {
    string status = 1;
    string message = 2;
    repeated MetalDto data = 3;
    string error = 4;
}