syntax = 'proto3';

package cart;

service CartsController {
    rpc FindCart (CartByUserId) returns (ResponseDataCart);
    rpc UpdateCart(UpdateCartDto) returns (ResponseDataCart);
    rpc DeleteItemFromCart(CartByItemId) returns (ResponseDataCart);
    rpc ClearCart(CartByUserId) returns (ResponseDataCartDeleted);
    rpc DeleteItem(CartById) returns (ResponseDataCartDeleted);
    rpc AddItem(AddItemDto) returns (ResponseDataCart);
    rpc UpdateItem(UpdateItemDto) returns (ResponseDataItem);
    rpc CreateItem(CreateItemDto) returns (ResponseDataItem);
}

message CartByUserId {
    string id = 1;
}

message CartByItemId {
    string userId = 1;
    string itemId = 2;
}

message CartById {
    string id = 1;
}

message Cart {
    string userId = 1;
    repeated ItemInCart itemInCart = 2;
    int32 varietyOfItems = 3;
    int32 totalPrice = 4;
}

message UpdateCartDto {
    string userId = 1;
    string itemId = 2;
    int32 quantity = 3;
}

message UpdateItemDto {
    string id = 1;
    string image = 2;
    string itemName = 3;
    string description = 4;
    string metalImage = 5;
    int32 price = 6;
}

message CreateItemDto {
    string image = 1;
    string itemName = 2;
    string description = 3;
    string metalImage = 4;
    int32 price = 5;
}

message AddItemDto {
    string itemId = 1;
    string userId = 2;
    string image = 3;
    string itemName = 4;
    string description = 5;
    string metalImage = 6;
    int32 price = 7;
}

message Item {
    string id = 1;
    string image = 2;
    string itemName = 3;
    string description = 4;
    string metalImage = 5;
    int32 price = 6;
}

message ItemInCart {
    string id = 1;
    string image = 2;
    string itemName = 3;
    string description = 4;
    string metalImage = 5;
    int32 price = 6;
    int32 quantity = 7;
}

message DeleteResponse {
    string message = 1;
}

message ResponseDataCart {
    string status = 1;
    string message = 2;
    oneof response {
        Cart data = 3;
        string error = 4;
    }
}

message ResponseDataCartDeleted {
    string status = 1;
    string message = 2;
    oneof response {
        DeleteResponse data = 3;
        string error = 4;
    }
}

message ResponseDataItem {
    string status = 1;
    string message = 2;
    oneof response {
        Item data = 3;
        string error = 4;
    }
}